[gd_scene load_steps=7 format=3 uid="uid://bwqwrfp616h21"]

[ext_resource type="Script" path="res://core/ui/cardui/qam/qam_card.gd" id="1_nu7eg"]
[ext_resource type="PackedScene" uid="uid://uljtdvmuol3l" path="res://core/systems/input/focus_group_setter.tscn" id="2_3gbka"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="2_3ilsd"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="3_3umv1"]
[ext_resource type="Resource" uid="uid://dpc1o781f43ef" path="res://core/ui/cardui/qam/quick_access_menu_focus.tres" id="4_f1mex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptn26"]
resource_local_to_scene = true
bg_color = Color(0.105882, 0.109804, 0.141176, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="QuickAccessCard" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 51.0
grow_horizontal = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ptn26")
script = ExtResource("1_nu7eg")

[node name="FocusGroupSetter" parent="." node_paths=PackedStringArray("target") instance=ExtResource("2_3gbka")]
target = NodePath("../MarginContainer/VBoxContainer/ContentContainer/FocusGroup")
on_signal = "pressed"

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SectionLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_3ilsd")]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="FocusGroup" parent="MarginContainer/VBoxContainer/ContentContainer" instance=ExtResource("3_3umv1")]
focus_stack = ExtResource("4_f1mex")
